--- a/src/pages/Map/components/Leaderboard/index.module.css
+++ b/src/pages/Map/components/Leaderboard/index.module.css
@@ -71,7 +71,7 @@
   position: sticky;
   top: 77px;
   box-shadow: 0 1px 2px #c7c7c7;
-  z-index: 2;
+  z-index: 5;
   width: -moz-available;
 }
 
